<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.redteam.ndsunutrition.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings" >

        <menu>
            <item
                android:id="@+id/user_profile"
                android:title="@string/user_profile" />
            <item
                android:id="@+id/dashboard"
                android:title="@string/dashboard"/>
            <item
                android:id="@+id/recommendations"
                android:title="@string/recommendations"/>
            <item
                android:id="@+id/custom_recipes"
                android:title="@string/custom_recipes"/>
            <item
                android:id="@+id/export_data"
                android:title="@string/export_data"/>
            <item
                android:id="@+id/about"
                android:title="@string/about" />

        </menu>
`   </item>


</menu>
